--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     >
   </head>
   <body>
-    <div class="aaa">
+    <div class="link">
       <img src="./eisenhower-matrix.jpg">
       <a
-          class="more-inf"
+          class="more-info"
           href="https://goal-life.com/page/method/matrix-eisenhower"
       >
         Want more details?
