--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         charset="utf-8"
     >
   </head>
-  <body>
+  <body class="common-style">
     <div class="link">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="link-image" src="./eisenhower-matrix.jpg">
       <a
           class="more-info"
           href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -25,37 +25,37 @@
     </div>
     <div class="main">
       <p id="add-task">
-        <label for="new-task">Add Item</label>
+        <label class="add-task-label" for="new-task">Add Item</label>
         <div class="task-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input class="input task" id="new-task" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="header">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="tasks">
+          <input class="checkbox" type="checkbox">
+          <label class="label task">Pay Bills</label>
+          <input class="input task" type="text">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="tasks edit-mode">
+          <input class="checkbox" type="checkbox">
+          <label class="label task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input task">
+          <button class="btn edit">Save</button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="header">Completed</h3>
       <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="tasks">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="label task">See the Doctor</label>
+          <input type="text" class="input task">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
     </div>
