refactor: use semantic tags in html according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     >
   </head>
   <body class="common-style">
-    <div class="link">
+    <section class="link">
       <img class="link-image" src="./eisenhower-matrix.jpg">
       <a
           class="more-info"
@@ -22,14 +22,14 @@
       >
         Want more details?
       </a>
-    </div>
-    <div class="main">
+    </section>
+    <main class="main">
       <p id="add-task">
         <label class="add-task-label" for="new-task">Add Item</label>
-        <div class="task-wrapper">
+        <section class="task-wrapper">
           <input class="input task" id="new-task" type="text">
           <button class="btn">Add</button>
-        </div>
+        </section>
       </p>
       <h3 class="header">Todo</h3>
       <ul id="incomplete-tasks">
@@ -58,7 +58,7 @@
           <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
