refactor: add alt attribute for images in html according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="common-style">
     <section class="link">
-      <img class="link-image" src="./eisenhower-matrix.jpg">
+      <img class="link-image" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
       <a
           class="more-info"
           href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -38,14 +38,14 @@
           <label class="label task">Pay Bills</label>
           <input class="input task" type="text">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
         <li class="tasks edit-mode">
           <input class="checkbox" type="checkbox">
           <label class="label task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="input task">
           <button class="btn edit">Save</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
       </ul>
       <h3 class="header">Completed</h3>
@@ -55,7 +55,7 @@
           <label class="label task">See the Doctor</label>
           <input type="text" class="input task">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="delete-img" src="./remove.svg"></button>
+          <button class="btn delete"><img class="delete-img" src="./remove.svg" alt=""></button>
         </li>
       </ul>
     </main>
